# rust-rocket-api

./: .example.env  .gitignore  Cargo.toml  README.md
migrations/20170810032025_create_movies/: down.sql  up.sql
src/: README.md  main.rs  models.rs  movie.rs
