[package]
name = "rust-rocket-api"
version = "0.1.0"
authors = ["JD Gonzales <jd_gonzales@icloud.com>"]

[dependencies]
rocket = "0.3.2"
rocket_codegen = "0.3.2"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "0.15.0", features = ["postgres"] }
diesel_codegen = { version = "0.15.0", features = ["postgres"] }
dotenv = "0.9.0"

[dependencies.rocket_contrib]
version = "0.3.2"
default-features = false
features = ["json"]
